# sensilo

./: README.md
firmware/: .embed.toml  Cargo.toml  README.md  memory.x  openocd.sh
firmware/.cargo/: config
firmware/src/: delay.rs  main.rs  monotonic_nrf52.rs
gateway/: Cargo.toml  README.md
gateway/src/: config.rs  http.rs  influxdb.rs  main.rs  measurement.rs  types.rs
hardware/: README.md  bom.csv  power_management.md
hardware/boards/default/: board.lp
hardware/circuit/: circuit.lp
hardware/output/v1/: Sensilo_BOM.csv  Sensilo_v1.lppz
hardware/output/v1/gerber/: Sensilo_COPPER-BOTTOM.gbr  Sensilo_COPPER-TOP.gbr  Sensilo_DRILLS-NPTH.drl  Sensilo_DRILLS-PTH.drl  Sensilo_OUTLINES.gbr  Sensilo_SILKSCREEN-BOTTOM.gbr  Sensilo_SILKSCREEN-TOP.gbr  Sensilo_SOLDERMASK-BOTTOM.gbr  Sensilo_SOLDERMASK-TOP.gbr
hardware/project/: metadata.lp
hardware/schematics/main/: schematic.lp
