[package]
name = "sensilo"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5.1"
defmt = "0.1.2"
defmt-rtt = "0.1"
embedded-hal = "0.2"
nrf52832-hal = { version = "0.12", features = ["rt"], default-features = false }
panic-persist = { version = "0.2", features = ["utf8"] }
rubble = { git = "https://github.com/jonas-schievink/rubble" }
rubble-nrf5x = { git = "https://github.com/jonas-schievink/rubble", features = ["52832"], default-features = false }
shared-bus-rtic = "0.2"
shtcx = "0.10"
veml6030 = "0.1.2"

[profile.dev]
codegen-units = 1

[profile.release]
lto = true
debug = true
codegen-units = 1

[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
default = ["defmt-default"]
