[package]
name = "sensilo-gateway"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"

[dependencies]
base16 = "0.2"
env_logger = "0.7"
futures = "0.3"
hci = "0.1"
log = "0.4"
lru = "0.3"
pcap-async = "0.4.1"
serde = { version = "1", features = ["derive"] }
smol = "1.2"
toml = "0.5"
